--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -181,6 +181,8 @@ header.hero {
     background-color: #fff;
 
     & img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
       object-position: bottom;
       position: inherit !important;
@@ -257,7 +259,7 @@ header.hero {
     position: relative;
 
     .content {
-      padding: 48px 0 48px 16px;
+      padding: 48px 0 48px calc((100% - 720px) / 2 + 0.75rem);
 
       &::after {
         top: 0;
@@ -283,6 +285,10 @@ header.hero {
 
       > .flex-column {
         row-gap: 32px;
+      }
+
+      & > div {
+        width: 100%;
       }
     }
 
@@ -317,12 +323,13 @@ header.hero {
 
   @media (width >= 1200px) {
     .content {
-      padding: 48px 0 48px 60px;
-
-      > div {
-        width: 70%;
-      }
+      padding: 48px 0 48px calc((100% - 1140px) / 2 + 0.75rem);
     }
+  }
+
+  @media (width >= 1900px) {
+    max-width: 1900px;
+    margin: 0 auto;
   }
 }
 
